fix location info wrap & width

--- a/css/style.css
+++ b/css/style.css
@@ -975,6 +975,7 @@ html[lang='ja'] .slogan-text {
 .location__info {
   flex: 1;
   display: flex;
+  max-width: 90%;
   flex-direction: column;
   gap: var(--spacing-sm);
 }
@@ -1013,7 +1014,8 @@ html[lang='ja'] .slogan-text {
 }
 
 .location__value {
-  text-wrap: nowrap;
+  word-break: break-word;
+  overflow-wrap: anywhere;
   color: var(--color-white);
   font-size: var(--font-size-small);
 }
